# beatguessr

./: .env.example  .gitignore  Makefile  docker-compose.prod.yml  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  setup.cfg
.github/workflows/: build.yml  ci.yml  tag-and-build.yml
backend/: Dockerfile  Dockerfile.dev  playlists.json  pyproject.toml  pytest.ini
backend/accounts/: models.py  urls.py
backend/accounts/migrations/: 0001_initial.py  0002_alter_customuser_access_token_and_more.py  0003_remove_customuser_access_token_and_more.py
backend/accounts/services/: auth.py
backend/accounts/views/: __init__.py  callback.py  client_id.py  guest_user.py  login.py  logout.py  refresh.py  signup.py  user.py
backend/api/: models.py  urls.py
backend/api/migrations/: 0001_initial.py
backend/api/services/: auth.py
backend/api/views/: __init__.py  callback.py  user.py
backend/core/: asgi.py  dev.py  prod.py  settings.py  urls.py  views.py
backend/core/tests/: test_health.py
backend/quiz/: apps.py  constants.py  consumers.py  routing.py  urls.py
backend/quiz/management/commands/: create_playlists.py  reload_playlists.py
backend/quiz/migrations/: 0001_initial.py  0002_question_artist_found_question_title_found.py  0003_playlist.py  0004_song_popularity.py  0005_remove_question_artist_found_and_more.py  0006_playlist_users_alter_playlist_songs.py  0007_song_preview_url.py  0008_populate_song_preview_urla.py  0009_alter_song_preview_url.py
backend/quiz/models/: __init__.py  playlist.py  question.py  song.py
backend/quiz/services/: answer.py  playlist.py  question.py  room.py
backend/quiz/tests/services/: test_answer.py  test_playlist.py  test_question.py
backend/quiz/tests/views/: test_answer.py  test_playlist.py
backend/quiz/views/: __init__.py  answer.py  playlist.py  question.py  room.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: manifest.json
frontend/src/: App.js  App.tsx  Callback.js  Callback.tsx  GuessInput.js  GuessInput.tsx  Header.tsx  Login.js  Login.tsx  PlaylistCard.css  (+16 more)
scripts/: deploy.sh  tag.sh
(+5 files in other folders)
